--- a/docs/Green-Lab-General.css
+++ b/docs/Green-Lab-General.css
@@ -51,11 +51,14 @@
 
 .u-section-1 .u-list-1 {
   width: 194px;
-  min-height: 60px;
-  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
-  grid-gap: 10px 10px;
   margin: -70px calc(((100% - 1140px) / 2) + -63px) 10px auto;
+}
+
+.u-section-1 .u-repeater-1 {
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
+  grid-gap: 10px 10px;
+  min-height: 60px;
 }
 
 .u-section-1 .u-image-2 {
@@ -206,7 +209,6 @@
   }
 
   .u-section-1 .u-list-1 {
-    min-height: 55px;
     margin-right: calc(((100% - 540px) / 2));
   }
 
