--- a/docs/Green-Your-Lab.css
+++ b/docs/Green-Your-Lab.css
@@ -12,7 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 667px;
   pointer-events: auto;
-  background-image: url("images/GreenYourLab-23.jpg");
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -128,17 +128,16 @@
   .u-section-1 .u-list-1 {
     height: auto;
     margin-right: calc(((100% - 940px) / 2));
-    margin-bottom: 33px;
   }
 }
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 442px;
+    min-height: 461px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 442px;
+    min-height: 461px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -177,7 +176,7 @@
 
   .u-section-1 .u-list-1 {
     width: calc(((100% - 720px) / 2) + 175px);
-    margin-top: -72px;
+    margin-top: -91px;
     margin-right: 0;
     margin-bottom: 12px;
   }
@@ -205,22 +204,20 @@
 
 @media (max-width: 767px) {
    .u-section-1 {
-    min-height: 983px;
+    min-height: 955px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 982px;
+    min-height: 955px;
     background-position: 40.25% 50%;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-top: 1px;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 252px;
+    min-height: 253px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -258,7 +255,7 @@
     width: 250px;
     margin-top: -135px;
     margin-right: auto;
-    margin-bottom: 1px;
+    margin-bottom: 28px;
   }
 
   .u-section-1 .u-repeater-1 {
@@ -272,23 +269,15 @@
     min-height: 581px;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: 53px;
-  }
-
   .u-section-1 .u-image-1 {
-    min-height: 535px;
+    min-height: 581px;
     background-position: 39.75% 50.66%;
     background-size: auto 135%;
   }
 
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 30px;
-  }
-
   .u-section-1 .u-group-1 {
     min-height: 275px;
-    margin-top: -85px;
+    margin-top: -39px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -312,12 +301,12 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 745px;
+    min-height: 682px;
   }
 
   .u-section-1 .u-list-1 {
-    margin-top: -97px;
-    margin-bottom: 16px;
+    margin-top: -100px;
+    margin-bottom: 21px;
   }
 } .u-section-2 {
   background-image: linear-gradient(0deg, rgba(41,51,50,0.9), rgba(41,51,50,0.9)), url("images/Green-Lab.jpg");
@@ -961,7 +950,7 @@
 .u-section-5 .u-image-1 {
   min-height: 363px;
   pointer-events: auto;
-  background-image: url("images/contactGreenYourLab-25.jpg");
+  background-image: url("images/contactGreenYourLab.jpg");
   background-position: 50% 13.83%;
 }
 
